--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,38 @@
+atomicwrites==1.4.0
+attrs==21.2.0
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
 click==7.1.2
-Flask==1.1.2
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+colorama==0.4.4
+ConfigArgParse==1.5.1
+Flask==2.0.1
+Flask-BasicAuth==0.2.0
+Flask-Cors==3.0.10
+gevent==21.1.2
+geventhttpclient==1.4.4
+greenlet==1.1.0
+idna==3.2
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+locust==2.0.0
+MarkupSafe==2.0.1
+msgpack==1.0.2
+packaging==21.0
+pluggy==0.13.1
+psutil==5.8.0
+py==1.10.0
+pycparser==2.20
+pyparsing==2.4.7
+pytest==6.2.4
+pywin32==301
+pyzmq==22.2.0
+requests==2.26.0
+roundrobin==0.0.2
+six==1.16.0
+toml==0.10.2
+urllib3==1.26.6
+Werkzeug==2.0.1
+zope.event==4.5.0
+zope.interface==5.4.0
